--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -12,6 +12,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">Link</a>
 				</li>
+				<li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_credits_controller_name') }}">Mon name</a>
+                    </li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 						Dropdown
