--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,6 +13,7 @@
                         <legend>Mon identité</legend>
                         {{ form_row(registrationForm.lastname) }}
                         {{ form_row(registrationForm.firstname) }}
+                        {{ form_row(registrationForm.phone) }}
                         {{ form_row(registrationForm.email) }}
                     </fieldset>
 
