modif sylfony mission 9

--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -13,7 +13,10 @@
 					<a class="nav-link" href="#">Link</a>
 				</li>
 				<li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_credits_controller_name') }}">Mon name</a>
+                        <a class="nav-link" href="{{ path('app_credits_controller_name') }}">Mon concepteur du site</a>
+                    </li>
+				<li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_statistique') }}">Statistique</a>
                     </li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
