--- a/templates/statistique/index.html.twig
+++ b/templates/statistique/index.html.twig
@@ -6,8 +6,7 @@
     <main class="container">
         <section class="row">
             <div class="col-12">
-                <h1>Site e-commerce</h1>
-                <p>Bienvenue dans notre boutique</p>            
+                <h1>categorie</h1>      
             </div>
             {% for category in categories %}
                 {% if category.parent != null %}
@@ -20,6 +19,38 @@
                         </div>
                     </div>    
                 {% endif %}
+            {% endfor %}
+        </section>
+        <section class="row">
+            <div class="col-12">
+                <h1>Produit a moins de 50 euros</h1>       
+            </div>
+            {% for product in products %}
+                <div class="col-3 mb-3">
+                    <article class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title">{{ product.name }}</h2>
+                            <p class="card-text">{{ product.description }}</p>
+                            <a href="{{ path('products_details', {"slug": product.slug }) }}" class="btn btn-primary">Voir les détails</a>
+                        </div>
+                    </article>
+                </div>
+            {% endfor %}
+        </section>        
+        <section class="row">
+            <div class="col-12">
+                <h1>Ecran</h1>       
+            </div>
+            {% for product in presetProducts %}
+                <div class="col-3 mb-3">
+                    <article class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title">{{ product.name }}</h2>
+                            <p class="card-text">{{ product.description }}</p>
+                            <a href="{{ path('products_details', {"slug": product.slug }) }}" class="btn btn-primary">Voir les détails</a>
+                        </div>
+                    </article>
+                </div>
             {% endfor %}
         </section>
     </main>
